mail/proton-mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__add_noreferrer.snap
---
source: proton-mail-html-transformer/src/tests/transforms.rs
expression: html
---
<html><head></head><body><div>
          <a href="proton.me" rel="noreferrer">
          </a><a href="proton.me" rel="noreferrer">
        </a></div><a href="proton.me" rel="noreferrer">
        </a></body></html>
