mail/proton-mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__inject_style.snap
---
source: proton-mail-html-transformer/src/tests/transforms.rs
expression: html
---
<html><head>
   <html>
<style>
  body {
    background-color: Canvas;
    color: CanvasText;
    color-scheme: light dark;
  }
</style>
</html></head>
   <body>
   

</body></html>
