mail/proton-mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__inject_style_no_head.snap
---
source: proton-mail-html-transformer/src/tests/transforms.rs
expression: html
---
<html><head><style style="text/css">
body {
    background-color: Canvas;
    color: CanvasText;
    color-scheme: light dark;
}
</style></head><body><div>
          ain't no `head` here boss
        </div>
        </body></html>
